--- a/pretty.tex
+++ b/pretty.tex
@@ -1,1 +1,13 @@
-\documentclass{article}\title{Latex pretty printer}\begin{document}\maketitle \end{document}
+\documentclass{article}\author{The accent compiler compiler}\title{Latex pretty printer}\begin{document}\maketitle
+{\bf int}{\bf int}{\bf char}\{\\
+{\bf register}{\bf auto};\\
+$ 0 $
+\{\\
+"Help! Build environment is insane!\n"
+$ 12 $
+;\\
+\}\\
+$ 0 $
+;\\
+\}\\
+\end{document}
