--- a/pretty.tex
+++ b/pretty.tex
@@ -1,44 +1,59 @@
 \documentclass{article}\author{The accent compiler compiler}\title{Latex pretty printer}\begin{document}\maketitle
-\begin{tabbing}xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\kill{\bf void} quick\_sort({\bf int} arr[$20$],\ {\bf int} low,\ {\bf int} high)\{\+\\
-{\bf int} pivot,\ j,\ temp,\ i;\\
+\begin{tabbing}xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\kill{\bf int}  printf({\bf char}  *fmt);\\\
+{\bf void}  quick\_sort({\bf int} arr [$20$],\ {\bf int} low ,\ {\bf int} high )\{\+\\
+{\bf int}  pivot,\ j,\ temp,\ i;\\
 {\bf if} (low\ $<$\ high)\{\+\\
-pivot =\ low;\\
-i =\ low;\\
-j =\ high;\\
+ pivot\ =\ low;\\
+ i\ =\ low;\\
+ j\ =\ high;\\
 {\bf while} (i\ $<$\ j)\{\+\\
-{\bf while} ((arr[i]\ $\leq$\ arr[pivot])(i\ $<$\ high))\{\+\\
-i++;\\
+{\bf while} ((arr[i]\ $\leq$\ arr[pivot])\ $\wedge$\ (i\ $<$\ high))\{\+\\
+ i++;\\
 \<\}\-\\
 {\bf while} (arr[j]\ $>$\ arr[pivot])\{\+\\
-j--;\\
+ j--;\\
 \<\}\-\\
 {\bf if} (i\ $<$\ j)\{\+\\
-temp =\ arr[i];\\
-arr[i] =\ arr[j];\\
-arr[j] =\ temp;\\
+ temp\ =\ arr[i];\\
+ arr[i]\ =\ arr[j];\\
+ arr[j]\ =\ temp;\\
 \<\}\-\\
 {\bf else} {\bf if} (derp)\{\+\\
-bjork();\\
+ bjork();\\
 \<\}\-\\
 {\bf else} \{\+\\
-derp();\\
+ derp();\\
 \<\}\-\\
 \<\}\-\\
-temp =\ arr[pivot];\\
-arr[pivot] =\ arr[j];\\
-arr[j] =\ temp;\\
-quick\_sort(arr,\ low,\ j-$1$);\\
-quick\_sort(arr,\ j+$1$,\ high);\\
+temp=\ arr[pivot];\\
+arr[pivot]=\ arr[j];\\
+arr[j]=\ temp;\\
+quick\_sort(arr,\ low,\ j\ -\ $1$);\\
+quick\_sort(arr,\ j\ +\ $1$,\ high);\\
 \<\}\-\\
 \<\}\-\\
 \\
-{\bf int} main({\bf int} argc,\ {\bf char} *argv[])\{\+\\
-{\bf int} i,\ a[$10$]=\{$1$,\ $5$,\ $3$,\ $8$,\ $6$,\ $2$,\ $8$,\ $6$,\ $4$,\ $1$\};\\
-quick\_sort(a,\ $0$,\ $9$);\\
-{\bf for} (i =\ $0$;i\ $<$\ $10$;i++)\{\+\\
-printf(" \%4d",\ a[i]);\\
+{\bf int}  main({\bf int} argc ,\ {\bf char}  *argv[])\{\+\\
+{\bf int}  i,\ a[$10$]\ =\ \{$1$,\ $5$,\ $3$,\ $8$,\ $6$,\ $2$,\ $8$,\ $6$,\ $4$,\ $1$\};\\
+{\bf register}  n\ =\ (count\ +\ $7$)\ /\ $8$;\\
+quick\_sort (a,\ $0$,\ $9$);\\
+{\bf for} (i=\ $0$;\ i\ $<$\ $10$;\ i++)\{\+\\
+printf (" \%4d",\ a[i]);\\
 \<\}\-\\
 putchar('\textbackslash n');\\
+{\bf switch} (count\ \%\ $8$)\{\+\\
+{\bf case} $0$:{\bf do} \{\+\\
+ *to++=\ *from++;\\
+{\bf case} $1$:*to++=\ *from++;\\
+{\bf case} $2$:*to++=\ *from++;\\
+{\bf case} $3$:*to++=\ *from++;\\
+{\bf case} $4$:*to++=\ *from++;\\
+{\bf case} $5$:*to++=\ *from++;\\
+{\bf case} $6$:*to++=\ *from++;\\
+{\bf case} $7$:*to++=\ *from++;\\
+\<\}\-\\
+{\bf while} (--n\ $>$\ $0$);\\
+\<\}\-\\
 {\bf return} $0$;\\
 \<\}\-\\
 \\
