final report, added sample code

--- a/report.tex
+++ b/report.tex
@@ -21,6 +21,8 @@ Since there is a difference in the escape sequences between \LaTeX \ and C, we h
 
 Our parser accepts pretty much all valid ANSI-C code.
 
+\pagebreak
+
 \section*{Result}
 
 The following code is the result of running some sample code trough our parser.
