--- a/pretty.tex
+++ b/pretty.tex
@@ -1,4 +1,3 @@
-\documentclass{article}\begin{document}
 \begin{tabbing}xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\kill{\bf int}  main({\bf int} argc ,\ {\bf char}  *argv[])\{\+\\
 printf ("Hello world!");\\
 {\bf return} $0$;\\
@@ -61,23 +60,4 @@ quick\_sort(arr,\ j\ +\ $1$,\ high);\\
 \<\}\-\\
 \<\}\-\\
 \\
-send(to,\ from,\ count){\bf register} {\bf short}  *to,\ *from;\\
-{\bf register} count ;\\
-\{\+\\
-{\bf register}  n\ =\ (count\ +\ $7$)\ /\ $8$;\\
-{\bf switch} (count\ \%\ $8$)\{\+\\
-{\bf case} $0$: {\bf do} \{\+\\
- *to\ =\ *from++;\\
-{\bf case} $7$: *to\ =\ *from++;\\
-{\bf case} $6$: *to\ =\ *from++;\\
-{\bf case} $5$: *to\ =\ *from++;\\
-{\bf case} $4$: *to\ =\ *from++;\\
-{\bf case} $3$: *to\ =\ *from++;\\
-{\bf case} $2$: *to\ =\ *from++;\\
-{\bf case} $1$: *to\ =\ *from++;\\
-\<\}\-\\
-{\bf while} (--n\ $>$\ $0$);\\
-\<\}\-\\
-\<\}\-\\
-\\
-\end{tabbing}\end{document}
+\end{tabbing}
