--- a/report.tex
+++ b/report.tex
@@ -16,7 +16,12 @@ The assignment is to make a parser for the ANSI-C language and convert the input
 
 \section*{Design}
 
-To make a scanner and parser compatible, they at least have to use the same tokens. Therefore we removed the token definition enum from the scanner input and put it in a token directive in the accent file. Accent then generates a header file containing these definitions, which we included in the scanner file. The next modification we made to the scanner is to put the lexemes int to a special variable \lstinline{yylval}. We defined the type of this \lstinline{yylval} as a union, so it could contain all the different types of lexemes. In addition to the ususal lexeme types (eg. identifers, strings and numbers) we put the keywords, operator and other interpunction characters in the \lstinline{yylval} so as to make printing of those more convenient. We use the grammar specification from the book `The C programming language' as a basis for our parser. We rewrote it to make use of the regular expression facilities offered by Accent.
+To make a scanner and parser compatible, they at least have to use the same tokens. Therefore we removed the token definition enum from the scanner input and put it in a token directive in the accent file. Accent then generates a header file containing these definitions, which we included in the scanner file. 
+
+The next modification we made to the scanner is to put the lexemes int to a special variable \lstinline{yylval}. We defined the type of this \lstinline{yylval} as a union, so it could contain all the different types of lexemes. In addition to the ususal lexeme types (eg. identifers, strings and numbers) we put the keywords, operator and other interpunction characters in the \lstinline{yylval} so as to make printing of those more convenient. 
+
+We use the grammar specification from the book `The C programming language' as a basis for our parser. We rewrote it to make use of the regular expression facilities offered by Accent.
+
 Since there is a difference in the escape sequences between \LaTeX \ and C, we had to convert certain special characters. For this we made a few helper functions. To keep the grammar readable, we defined some macros for commonly used functions to add more brevity. These are then called in the semantic actions of the parser and so produced a final \LaTeX \ result.
 
 Our parser accepts pretty much all valid ANSI-C code.
@@ -24,6 +29,8 @@ Our parser accepts pretty much all valid ANSI-C code.
 \pagebreak
 
 \section*{Result}
+
+The README.md file contains more practical instructions on how to build and run the parser
 
 The following code is the result of running some sample code trough our parser.
 
