--- a/pretty.tex
+++ b/pretty.tex
@@ -1,63 +1,1 @@
-\begin{tabbing}xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\kill{\bf int}  main({\bf int} argc ,\ {\bf char}  *argv[])\{\+\\
-printf ("Hello world!\textbackslash n");\\
-{\bf return} argc\ $>$\ $1$\ ?\ atoi(argv[$1$])\ :\ $5$["Hello world!"]\ +\ '\textbackslash v'\ -\ !!argc;\\
-\<\}\-\\
-\\
-{\bf float}  Q\_rsqrt({\bf float} number )\{\+\\
-{\bf long} i ;\\
-{\bf float}  x2,\ y;\\
-{\bf const} {\bf float}  threehalfs\ =\ $1.500000$;\\
- x2\ =\ number\ *\ $0.500000$;\\
- y\ =\ number;\\
- i\ =\ *({\bf long} *)\&y;\\
- i\ =\ $0$\ -\ (i\ $>>$\ $1$);\\
- y\ =\ *({\bf float} *)\&i;\\
- y\ =\ y\ *\ (threehalfs\ -\ (x2\ *\ y\ *\ y));\\
-{\bf return} y;\\
-\<\}\-\\
-\\
-{\bf void}  quick\_sort({\bf int} arr [$20$],\ {\bf int} low ,\ {\bf int} high )\{\+\\
-{\bf int}  pivot,\ j,\ temp,\ i;\\
-{\bf if} (low\ $<$\ high)\{\+\\
- pivot\ =\ low;\\
- i\ =\ low;\\
- j\ =\ high;\\
-{\bf while} (i\ $<$\ j)\{\+\\
-{\bf while} ((arr[i]\ $\leq$\ arr[pivot])\ $\wedge$\ (i\ $<$\ high))\{\+\\
- i++;\\
-\<\}\-\\
-{\bf while} (arr[j]\ $>$\ arr[pivot])\{\+\\
- j--;\\
-\<\}\-\\
-{\bf if} (i\ $<$\ j)\{\+\\
- temp\ =\ arr[i];\\
- arr[i]\ =\ arr[j];\\
- arr[j]\ =\ temp;\\
-\<\}\-\\
-\<\}\-\\
-temp\ =\ arr[pivot];\\
-arr[pivot]\ =\ arr[j];\\
-arr[j]\ =\ temp;\\
-quick\_sort(arr,\ low,\ j\ -\ $1$);\\
-quick\_sort(arr,\ j\ +\ $1$,\ high);\\
-\<\}\-\\
-\<\}\-\\
-\\
-{\bf void}  duff({\bf register} {\bf short}  *to,\ {\bf register} {\bf short}  *from,\ {\bf register} count )\{\+\\
-{\bf register}  n\ =\ (count\ +\ $7$)\ /\ $8$;\\
-{\bf switch} (count\ \%\ $8$)\{\+\\
-{\bf case} $0$:\ {\bf do} \{\+\\
- *to++\ =\ *from++;\\
-{\bf case} $7$:\ *to++\ =\ *from++;\\
-{\bf case} $6$:\ *to++\ =\ *from++;\\
-{\bf case} $5$:\ *to++\ =\ *from++;\\
-{\bf case} $4$:\ *to++\ =\ *from++;\\
-{\bf case} $3$:\ *to++\ =\ *from++;\\
-{\bf case} $2$:\ *to++\ =\ *from++;\\
-{\bf case} $1$:\ *to++\ =\ *from++;\\
-\<\}\-\\
-{\bf while} (--n\ $>$\ $0$);\\
-\<\}\-\\
-\<\}\-\\
-\\
-send(to,\ from,\ count){\bf register} {\bf short}  *to,\ *from;\\
+\begin{tabbing}xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\kill
